<resources>
    <string name="validator_email">Tu correo electrónico es inválido</string>
    <string name="validator_empty">Este campo no debe estar vacío</string>
    <string name="validator_phone">Por favor, captura un número de teléfono valido</string>
    <string name="validator_url">The URL entered is incorrect.</string>
    <string name="validator_confirm">The confirm field is not valid.</string>
    <string name="validator_alnum">The value has not only alnum characters.</string>
    <string name="validator_hex">The value has not only hexadecimal digit characters.</string>
    <string name="validator_regexp">The value does not match against pattern.</string>
    <string name="validator_range">The value is not between the required range.</string>
    <string name="validator_date">The entered date is not valid.</string>
    <string name="validator_ip">The ip address is not valid.</string>
    <string name="validator_num">Inputed text contains something that isn\'t numeric.</string>
    <string name="app_name">Permutas SEP</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_post">Publicar permuta</string>
    <string name="action_search">Buscar</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="action_about">Acerca de</string>
    <string name="tos_welcome_to_ps_app">¡Gracias por usar Permutas SEP!</string>
    <string name="tos_welcome_text">Antes de comenzar, considera leer esta importante información legal referente al uso de esta aplicación. ¡Solo te tomará un minuto!</string>
    <string name="about_activity_description"><![CDATA[<b>Permutas SEP</b> le permite a los maestros de México acercarse a sus familias, a sus lugares de origen y hasta a mudarse de la ciudad a la playa.
<br/>
<a href="http://permutassep.com">permutassep.com</a>
<br/>
<br/>
<b>Autores: </b>
<br/>
<a href="http://twitter.com/krescruz">Cresencio</a> y <a href="http://twitter.com/lalongooo">Jorge</a>
<br/>
<br/>
<b>Agradecimientos</b>
<br/>
LEP Fernando Gabriel Osorio Hurtado
<br/>
Tamaulipas
<br/>
<br/>
<b>A continuacion las licencias de software de código abierto:</b>]]></string>
    <string name="about_activity_title">Acerca de</string>
    <string name="wizard_contact_suggest_data_completion_dialog_msg">Si completas los datos en esta seccion, podrán contactarte con mayor facilidad. Presiona Siguiente si no quieres agregar mayor información</string>
    <string name="wizard_post_text_label">Información adicional</string>
    <string name="wizard_post_text_hint">p. ej. "Escuela bien ubicada"</string>
    <string name="wizard_post_dlg_title">Espera...</string>
    <string name="wizard_post_dlg_text">Estamos publicando tu permuta</string>
    <string name="ups">Ups...</string>
    <string name="wizard_post_retry_dlg_message">Tuvimos un problema al intentar publicar. ¿Quieres volver a intentarlo?</string>
    <string name="retry">Reintentar</string>
    <string name="wizard_post_retry_dlg_success_post_title">Felicidades!</string>
    <string name="wizard_post_retry_dlg_success_post_message">Acabas de publicar tu cambio de adscripción deseado. Te deseamos mucha suerte para que lo consigas.</string>
    <string name="app_overview_1st_item_text">Queremos que la información esté al alcance de todos</string>
    <string name="app_overview_2nd_item_text">Creemos que nuestra solución hará a más personas felices</string>
    <string name="app_overview_3rd_item_text">Esperamos que encuentres pronto tu permuta&#8230;de verdad.</string>
    <string name="app_overview_4th_item_text">Si crees importante este aporte, considera una donación.</string>
    <string name="app_overview_start_posting_button">!Comenzar a publicar!</string>
    <string name="app_overview_signup_button">Registrarse</string>
    <string name="edit_profile_button_edit">Actualizar datos</string>
    <string name="app_sign_up">Registrarme</string>
    <string name="app_sign_up_facebook_login_button">Registrarme con Facebook</string>
    <string name="app_sign_up_finish_fb_registration">Terminar registro</string>
    <string name="app_sign_up_finish_fb_text">Completa la información necesaria para tu registro:</string>
    <string name="app_sign_up_error_duplicate_email">Revisa que el email no haya sido registrado previamente</string>
    <string name="app_sign_up_hint_name">Tu nombre</string>
    <string name="app_sign_up_hint_email">Tu correo</string>
    <string name="app_sign_up_hint_password">Tu contraseña</string>
    <string name="app_sign_up_log_in_with">O registrate con</string>
    <string name="app_sign_up_log_reg_dlg_title">Espera...</string>
    <string name="app_sign_up_log_reg_dlg_text">Te estamos registrando</string>
    <string name="app_sign_up_compl_fb_data_duplicated_email">El email o teléfono ya se encuentra registrados.</string>
    <string name="app_sign_up_invite_dlg_title">Únete!</string>
    <string name="app_sign_up_invite_dlg_msg">Si te registras, encontrarás más rápido tu permuta de centro de trabajo. Es gratis!</string>
    <string name="app_sign_up_invite_dlg_ok_option">Registrarme</string>
    <string name="network_availability_dlg_text">Su dispositivo no tiene acceso a Internet.</string>
    <string name="search_state_prompt">Estado</string>
    <string name="search_city_prompt">Municipio</string>
    <string name="search_town_prompt">Localidad</string>
    <string name="search_fragment_origin_label">Origen</string>
    <string name="search_fragment_target_label">Destino</string>
    <string name="search_fragment_btn_search">Buscar</string>
    <string name="search_fragment_dlg_title">Espera</string>
    <string name="search_fragment_dlg_text">Buscando...</string>
    <string name="search_fragment_filters_error_msg">Ocurrió un error en tu búsqueda</string>
    <string name="search_fragment_results_empty_dlg_title">"Búsqueda"</string>
    <string name="search_fragment_results_empty_dlg_msg">"No encontramos ningún resultado"</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="error">Error</string>
    <string name="search_fragment_search_error_msg">Ocurrió un error en tu búsqueda</string>
    <string name="search_fragment_search_no_results">No se encontraron resultados</string>
    <string name="password_reset_dlg_title">Recuperar contraseña</string>
    <string name="password_reset_dlg_resetting_password">Estamos restableciendo tu contraseña</string>
    <string name="password_reset_dlg_msg">Para recuperar tu contraseña, captura el correo que usaste en tu registro:</string>
    <string name="password_reset_dlg_input_hint">Tu correo electrónico</string>
    <string name="password_reset_dlg_password_reset_successful">Tu contraseña fué cambiada</string>
    <string name="password_reset_dlg_not_found_email">No pudimos encontrar tu cuenta con esa información</string>
    <string name="password_reset_email_sent_msg">Hemos enviado un correo electrónico a <b>%1$s</b>.\nHaz clic en el enlace que verás para restablecer tu contraseña.\nSi no ves el correo electrónico en tu bandeja de entrada, revisa otras carpetas, como Correo electrónico no deseado o Sociales.</string>
    <string name="password_reset_obsolete_token_error">El enlace de restablecimiento en el que has hecho clic ha expirado. Por favor, solicita uno nuevo.</string>
    <string name="new_password_forgot_password_message"><u>Olvidé mi contraseña</u></string>
    <string name="new_password_toolbar_title">Cambiar contraseña</string>
    <string name="new_password_label">Restablece tu contraseña</string>
    <string name="new_password_capture_email_label">Para recuperar tu contraseña, captura el correo que usaste en tu registro:</string>
    <string name="new_password_capture_email_msg">Ingresa tu correo electrónico</string>
    <string name="new_password_capture_email_hint">Correo electrónico</string>
    <string name="new_password_capture_email_wrong">No pudimos encontrar tu cuenta con esa información</string>
    <string name="new_password_capture_email_loading">Estamos buscando tu correo electrónico</string>
    <string name="new_password_capture_outdated_url">El enlace de restablecimiento en el que has hecho clic ha expirado. Por favor, solicita uno nuevo.</string>
    <string name="new_password_email_sent_label">Revisa tu correo electrónico</string>
    <string name="new_password_email_sent_msg_1">Hemos enviado un correo electrónico a %1$s.</string>
    <string name="new_password_email_sent_msg_2">Haz clic en el enlace del correo electrónico para restablecer tu contraseña.</string>
    <string name="new_password_email_sent_msg_3">Si no ves el correo electrónico en tu bandeja de entrada, revisa otras carpetas donde podría estar, como tus carpetas de correo electrónico no deseado, sociales </string>
    <string name="new_password_recommendation">Las contraseñas fuertes incluyen números, letras y signos de puntuación.</string>
    <string name="new_password_first_label">Contraseña nueva</string>
    <string name="new_password_second_label">Repite tu contraseña nueva</string>
    <string name="new_password_passwords_mismatch">Las contraseñas no coinciden</string>
    <string name="new_password_resetting_password">Restableciendo tu contraseña</string>
    <string name="new_password_reset">Enviar</string>
    <string name="new_password_login_error">Tu contraseña fué restablecida correctamente. Sin embargo, ocurrió un error al iniciar sesión. Por favor, intenta de nuevo.</string>
    <string name="new_password_request_new_token">Solicitar nuevo enlace</string>
    <string name="new_password_password_length_error">La longitud debe ser entre %1$s-%2$s caracteres</string>
    <string name="new_password_malformed_url">Dirección inválida</string>
    <string name="app_login_sign_up_already_have_account">Ya tengo cuenta</string>
    <string name="app_login_sign_up_log_in">Iniciar sesión</string>
    <string name="app_login_sign_up_want_to_register">No tengo cuenta</string>
    <string name="app_login_sign_up_want_to_register_cta">Registrarme</string>
    <string name="app_login_sign_up_user_exist">Ya te encuentras registrado, por favor, inicia sesión.</string>
    <string name="app_login_sign_up_continue"><u>Entrar como anónimo</u></string>
    <string name="app_login_username">Tu correo electrónico</string>
    <string name="app_login_password">Tu contraseña</string>
    <string name="app_login_fb_dlg_on_cancel">El inicio de sesión fue cancelado</string>
    <string name="app_login_fb_dlg_on_error">Ocurrió un error. Intenta de nuevo</string>
    <string name="app_login_fb_dlg_missing_email_title">Email</string>
    <string name="app_login_fb_dlg_missing_email_text">No obtuvimos tu email de Facebook, por favor captura tu email.</string>
    <string name="app_login_fb_dlg_wrong_email">Por favor, captura un email válido</string>
    <string name="app_login_btn_login">Iniciar sesión</string>
    <string name="app_login_dlg_login_title">Iniciar sesión</string>
    <string name="app_login_dlg_login_wrong_credentials">Ocurrió un error al inciar sesión. Asegúrate de capturar bien tu correo/contraseña.</string>
    <string name="app_login_dlg_login_err_text">Usuario o contraseña incorrectos</string>
    <string name="app_login_dlg_login_err_not_registered_text">Usuario no registrado</string>
    <string name="app_login_dlg_login_logging_in">Iniciando sesión</string>
    <string name="app_login_login_with_fb">O iniciar sesión con</string>
    <string name="app_login_btn_login_with_fb">Iniciar sesión con Facebook</string>
    <string name="app_news_feed_dlg_title">Espera...</string>
    <string name="app_news_feed_dlg_text">Cargando publicaciones</string>
    <string name="hint_your_name">Tu nombre</string>
    <string name="hint_your_email">Tu correo</string>
    <string name="hint_your_phone">Tu teléfono</string>
    <string name="hint_your_password">Tu contraseña</string>
</resources>