<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.permutassep.MainActivity">

    <item
        android:id="@+id/action_post"
        android:title="@string/action_post"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:visible="false"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="collapseActionView" />
</menu>
