<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_margin="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvRecommendation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password_recommendation"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_margin="15dp" />

    <EditText
        android:id="@+id/etPasswordOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/new_password_first_label"
        android:inputType="textPassword"
        android:saveEnabled="false" />

    <EditText
        android:id="@+id/etPasswordTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/new_password_second_label"
        android:inputType="textPassword"
        android:saveEnabled="false" />

    <TextView
        android:id="@+id/btnResetPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/new_password_reset"
        android:layout_margin="30dp"
        android:background="@drawable/regbtn_states"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="16sp" />


</LinearLayout>


